--- a/Exponential Runtime Algorithms /algo3.tex
+++ b/Exponential Runtime Algorithms /algo3.tex
@@ -7,7 +7,7 @@
 \usepackage[margin=2.2cm]{geometry}
 
 \title{Theory Assignment-:3 ADA Winter-2024}
-\author{Rohan Beriwal(2022413) \and Sagnik Jana (2022425)}
+\author{Rohan Beriwal(2022413)}
 \begin{document}
 \maketitle
 
